--- a/Univariate/Project/FS_Uni_SelectKBest.ipynb
+++ b/Univariate/Project/FS_Uni_SelectKBest.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('train.csv')\n"
+    "data = pd.read_csv('Mobile Classification.csv')\n"
    ]
   },
   {
